@@ -50,6 +50,13 @@ changedir=.
 commands=py.test --doctest-modules _pytest
 deps=
 
+[testenv:py32]
+deps=
+    :pypi:nose
+
+[testenv:py33]
+deps=
+    :pypi:nose
 
 [testenv:doc]
 basepython=python
